<resources>
    <string name="app_name">TikTokAnalog</string>
    <!-- Strings related to login -->
    <string name="user_name">Имя</string>
    <string name="phone">Телефон</string>
    <string name="birthday">Дата рождения*</string>
    <string name="city">Город</string>
    <string name="prompt_email">e-mail</string>
    <string name="prompt_password">Пароль</string>
    <string name="confirm_password">Повтор пароля</string>
    <string name="action_sign_in">Зарегистрироваться</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"добро\nпожаловать,"</string>
    <string name="invalid_username">Невалидное имя пользователя</string>
    <string name="invalid_phone_number">Неверный формат номера телефона</string>
    <string name="invalid_email">Неверный формат email</string>
    <string name="invalid_password">Пароль должен содержать больше 5 символов</string>
    <string name="passwords_not_match"> Введенные пароли должны совпадать </string>
    <string name="login_failed">"Login failed"</string>
    <string name="dear_user">дорогой пользователь \nк нам в App…</string>
    <string name="registration">Регистрация</string>
    <string name="authorization">Авторизация</string>
    <string name="birth_date">Дата рождения*</string>
    <string name="action_sign_up">Войти</string>
    <string name="e_mail_or_phone">e-mail или телефон</string>
    <string name="base_url">https://kepler88d.pythonanywhere.com</string>
    <string name="res_url">https://res.cloudinary.com/kepler88d/video/upload/fl_attachment</string>
</resources>